# AtlasMind-frontendUI

./: .gitignore  README.md  auth.py  main.py  pyproject.toml
aggregator/: __init__.py  engine.py  field_map.py  field_resolver.py  models.py
config/: defaults.py
docs/: architecture.md
jira-viz/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
jira-viz/src/: App.svelte  app.css
jira-viz/src/lib/: ChatPanel.svelte  JiraViz.svelte  Logo.svelte  PatPrompt.svelte  QueryEventClient.ts  auth.svelte.ts  colorMapping.ts  data.js  data.ts  dataStore.svelte.js  dataStore.svelte.ts  features.svelte.js  features.svelte.ts  state.svelte.js  state.svelte.ts  statusColors.ts
jira-viz/src/lib/charts/: AIHierarchyView.svelte  ChartPanel.svelte  ChartRenderer.svelte  ChartView.svelte  StackedBarChart.ts  chartStore.svelte.js  chartStore.svelte.ts  index.js  index.ts  specBuilder.js  specBuilder.ts  theme.js  theme.ts
jira-viz/src/lib/views/: HierarchyView.svelte  TableView.svelte
tests/: test_field_resolution.py
