[project]
name = "atlasmind-frontendui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyjanitor>=0.28.0",
    "uvicorn>=0.34.0",
]
